tests/errors/scoping_for/undefined_variable.b
fn main() {
    for i in 0..3 {
        x := i;
    }

    print(i);
}

